--- a/index.html
+++ b/index.html
@@ -477,6 +477,8 @@
           .desktop-ad-inline {
               display: none;
           }
+          /* Hide desktop-only banner ads on mobile */
+          .desktop-ad-only { display: none; }
 
           /* Mobile ad specific styles for the third card */
           .offer-card-ad-mobile-wrapper {
@@ -505,6 +507,8 @@
           .desktop-ad-inline {
               display: block;
           }
+          /* Show desktop-only banner ads on desktop */
+          .desktop-ad-only { display: block; }
 
           /* Desktop ad specific styles for the three cards */
           .offer-card-ad-desktop-wrapper {
@@ -961,6 +965,12 @@
                       <p data-lang-en="Learn how a simple URL shortener can transform your branding and improve your marketing campaigns. It's more than just a short link." data-lang-bn="একটি সাধারণ URL শর্টনার কীভাবে আপনার ব্র্যান্ডিংকে উন্নত করতে এবং আপনার বিপণন প্রচারাভিযানকে আরও কার্যকরী করতে পারে তা জানুন।">Learn how a simple URL shortener can transform your branding and improve your marketing campaigns. It's more than just a short link.</p>
                       <a href="" class="use-tool-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন" target="_blank" rel="noopener noreferrer">Read More <i class="ri-arrow-right-line"></i></a>
                   </div>
+              </div>
+          </div>
+          <div class="ad-container desktop-ad-only" style="margin-top: 25px;">
+              <div class="ad-iframe-container">
+                  <script type="text/javascript"> 	atOptions = { 		'key' : '3107b60e8baa0d0e886adf12d55fbd7e', 		'format' : 'iframe', 		'height' : 90, 		'width' : 728, 		'params' : {} 	}; </script>
+                  <script type="text/javascript" src="//www.highperformanceformat.com/3107b60e8baa0d0e886adf12d55fbd7e/invoke.js"></script>
               </div>
           </div>
       </section>
