--- a/index.html
+++ b/index.html
@@ -1126,25 +1126,6 @@
             .footer-links-group { display: contents; } 
             .ashiqur-popup { bottom: 80px; }
         }
-
-        /* স্টাইল অ্যাডজাস্টমেন্ট: অ্যাড কন্টেইনার */
-        .offer-ad-container.desktop-ad {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        /* অ্যাডগুলি পাশাপাশি বসানোর জন্য নতুন ফ্লেক্স কন্টেইনার */
-        @media (min-width: 769px) {
-            .daily-offer-ads {
-                display: flex;
-                justify-content: space-evenly; /* এই লাইনটি পরিবর্তন করা হয়েছে */
-                gap: 25px;
-                margin-top: 20px;
-            }
-            .offer-ad-container.desktop-ad {
-                display: block;
-            }
-        }
         
     </style>
 </head>
@@ -1269,6 +1250,18 @@
                         <p data-lang-en="Earn $100 daily from home." data-lang-bn="ঘরে বসে রোজ $100 আয় করুন।">Earn $100 daily from home.</p>
                         <a href="" class="join-offer-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন" target="_blank" rel="noopener noreferrer">Join Offer</a>
                     </div>
+                    <div class="offer-ad-container">
+                        <script type="text/javascript">
+                            atOptions = {
+                                'key' : 'eefd5e3bd2c4d4b53fe80f25417a2497',
+                                'format' : 'iframe',
+                                'height' : 250,
+                                'width' : 300,
+                                'params' : {}
+                            };
+                        </script>
+                        <script type="text/javascript" src="//www.highperformanceformat.com/eefd5e3bd2c4d4b53fe80f25417a2497/invoke.js"></script>
+                    </div>
                 </div>
 
                 <div class="offer-card-wrapper">
@@ -1279,6 +1272,18 @@
                         <h3 data-lang-en="Tasks" data-lang-bn="কাজ">Tasks</h3>
                         <p data-lang-en="Make money with simple online tasks." data-lang-bn="সহজ অনলাইন কাজ করে টাকা আয় করুন।">Make money with simple online tasks.</p>
                         <a href="" class="join-offer-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন" target="_blank" rel="noopener noreferrer">Join Offer</a>
+                    </div>
+                    <div class="offer-ad-container">
+                        <script type="text/javascript">
+                            atOptions = {
+                                'key' : 'eefd5e3bd2c4d4b53fe80f25417a2497',
+                                'format' : 'iframe',
+                                'height' : 250,
+                                'width' : 300,
+                                'params' : {}
+                            };
+                        </script>
+                        <script type="text/javascript" src="//www.highperformanceformat.com/eefd5e3bd2c4d4b53fe80f25417a2497/invoke.js"></script>
                     </div>
                 </div>
 
@@ -1291,32 +1296,18 @@
                         <p data-lang-en="Start your online business with us." data-lang-bn="আমাদের সাথে আপনার অনলাইন ব্যবসা শুরু করুন।">Start your online business with us.</p>
                         <a href="" class="join-offer-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন" target="_blank" rel="noopener noreferrer">Join Offer</a>
                     </div>
-                </div>
-            </div>
-            <div class="daily-offer-ads">
-                <div class="offer-ad-container desktop-ad">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key' : 'eefd5e3bd2c4d4b53fe80f25417a2497',
-                            'format' : 'iframe',
-                            'height' : 250,
-                            'width' : 300,
-                            'params' : {}
-                        };
-                    </script>
-                    <script type="text/javascript" src="//www.highperformanceformat.com/eefd5e3bd2c4d4b53fe80f25417a2497/invoke.js"></script>
-                </div>
-                <div class="offer-ad-container desktop-ad">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key' : 'eefd5e3bd2c4d4b53fe80f25417a2497',
-                            'format' : 'iframe',
-                            'height' : 250,
-                            'width' : 300,
-                            'params' : {}
-                        };
-                    </script>
-                    <script type="text/javascript" src="//www.highperformanceformat.com/eefd5e3bd2c4d4b53fe80f25417a2497/invoke.js"></script>
+                    <div class="offer-ad-container">
+                        <script type="text/javascript">
+                            atOptions = {
+                                'key' : 'eefd5e3bd2c4d4b53fe80f25417a2497',
+                                'format' : 'iframe',
+                                'height' : 250,
+                                'width' : 300,
+                                'params' : {}
+                            };
+                        </script>
+                        <script type="text/javascript" src="//www.highperformanceformat.com/eefd5e3bd2c4d4b53fe80f25417a2497/invoke.js"></script>
+                    </div>
                 </div>
             </div>
         </section>
@@ -1331,7 +1322,6 @@
                 <p data-lang-en="Discover the power of our all-in-one digital toolkit, designed to simplify your everyday tasks. From shortening URLs and performing complex calculations to managing your social media, NexTool Hub provides a wide range of free and efficient tools. Our mission is to make your digital life easier and more productive. Dive into our blog to learn more about our tools and how they can help you achieve your goals." data-lang-bn="আপনার দৈনন্দিন কাজগুলোকে সহজ করার জন্য তৈরি আমাদের অল-ইন-ওয়ান ডিজিটাল টুলকিটের ক্ষমতা আবিষ্কার করুন। URL ছোট করা, জটিল গণনা করা থেকে শুরু করে আপনার সোশ্যাল মিডিয়া পরিচালনা করা পর্যন্ত, নেক্সটুল হাব বিনামূল্যে এবং কার্যকর টুলের একটি বিস্তৃত পরিসর সরবরাহ করে। আমাদের লক্ষ্য হল আপনার ডিজিটাল জীবনকে আরও সহজ এবং উৎপাদনশীল করে তোলা। আমাদের টুল সম্পর্কে এবং কীভাবে তারা আপনাকে আপনার লক্ষ্য অর্জনে সহায়তা করতে পারে সে সম্পর্কে আরও জানতে আমাদের ব্লগে ডুব দিন।">Discover the power of our all-in-one digital toolkit, designed to simplify your everyday tasks. From shortening URLs and performing complex calculations to managing your social media, NexTool Hub provides a wide range of free and efficient tools. Our mission is to make your digital life easier and more productive. Dive into our blog to learn more about our tools and how they can help you achieve your goals.</p>
                 <a href="#" class="read-more-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন" target="_blank" rel="noopener noreferrer">Read More</a>
             </div>
-            
             <div class="ad-container-desktop">
                 <script type="text/javascript">
                     atOptions = {
@@ -1344,7 +1334,7 @@
                 </script>
                 <script type="text/javascript" src="//www.highperformanceformat.com/3107b60e8baa0d0e886adf12d55fbd7e/invoke.js"></script>
             </div>
-            </section>
+        </section>
 
         <section id="testimonials-section" class="testimonials-section filterable-section visible">
             <h2 class="on-scroll-animate" data-lang-en="What Our Users Say" data-lang-bn="ব্যবহারকারীরা যা বলেন">What Our Users Say</h2>
@@ -1379,7 +1369,6 @@
                     <p>All our tools are free to use without any hidden costs or subscriptions.</p>
                 </div>
             </div>
-
             <div class="ad-container-desktop">
                 <script type="text/javascript">
                     atOptions = {
@@ -1392,7 +1381,7 @@
                 </script>
                 <script type="text/javascript" src="//www.highperformanceformat.com/3107b60e8baa0d0e886adf12d55fbd7e/invoke.js"></script>
             </div>
-            </section>
+        </section>
     </div>
 
     <footer class="footer">
