--- a/facebook_free_like_follow.html
+++ b/facebook_free_like_follow.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     
     <meta property="og:url" content="https://nextoolhub.github.io/NexToolHub/facebook_free_like_follow.html">
-    <meta property="og:image" content="https://your-image-url.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/NexToolHub/NexToolHub/refs/heads/main/images/IMG_20250821_194704.jpg">
 
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -22,7 +22,7 @@
     <meta name="twitter:title" content="Shocking! Get 5000+ Free Likes & Followers in 1 Minute! ✨">
     <meta name="twitter:description" content="Your chance to go viral! Boost your Facebook posts with thousands of real likes, followers & reactions instantly. It's 100% free and super fast!">
     
-    <meta name="twitter:image" content="https://your-image-url.jpg">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/NexToolHub/NexToolHub/refs/heads/main/images/IMG_20250821_194704.jpg">
 
     <title data-lang-en="Viral Like & Follower Generator - NexTool Hub" data-lang-bn="ভাইরাল লাইক ও ফলোয়ার জেনারেটর - নেক্সটুল হাব">Viral Like & Follower Generator - NexTool Hub</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
