--- a/facebook_free_like_follow.html
+++ b/facebook_free_like_follow.html
@@ -856,7 +856,7 @@
     <div class="container">
         <header class="header">
             <div class="logo-container">
-                <a href="../../index.html" class="home-btn" data-lang-en="Home" data-lang-bn="হোম"><i class="ri-home-4-line"></i></a>
+                <a href="https://nextoolhub.github.io/NexToolHub/" class="home-btn" data-lang-en="Home" data-lang-bn="হোম"><i class="ri-home-4-line"></i></a>
                 <div class="logo">
                     <a href="../../index.html">Nex<span class="tool-text">Tool</span> <span class="hub-text">Hub</span></a>
                 </div>
