--- a/facebook_free_like_follow.html
+++ b/facebook_free_like_follow.html
@@ -1106,7 +1106,7 @@
                 const premiumPlanBtn = document.querySelector('.premium-plan');
                 const comingSoonMessage = document.getElementById('coming-soon-message');
     
-                const viralproPanelUrl = https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f ;
+                const viralproPanelUrl = "https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f";
     
                 let currentLang = 'en';
                 let comingSoonTimeoutId;
