--- a/index.html
+++ b/index.html
@@ -1040,11 +1040,11 @@
             <h2 class="on-scroll-animate" data-lang-en="From the Hub: Our Blog" data-lang-bn="হাউব থেকে: আমাদের ব্লগ">From the Hub: Our Blog</h2>
             <div class="blog-post-card on-scroll-animate">
                 <div class="blog-image-container">
-                    <img src="https://via.placeholder.com/800x250.png?text=Your+Blog+Image+Here" alt="Sample blog post image" class="blog-image">
+                    <img src="https://raw.githubusercontent.com/NexToolHub/NexToolHub/refs/heads/main/images/IMG_20250822_024625.jpg" class="blog-image">
                 </div>
                 <h3 data-lang-en="Welcome to NexTool Hub: Your Ultimate Digital Toolbox" data-lang-bn="নেক্সটুল হাবে স্বাগতম: আপনার ডিজিটাল টুলবক্স">Welcome to NexTool Hub: Your Ultimate Digital Toolbox</h3>
                 <p data-lang-en="Discover the power of our all-in-one digital toolkit, designed to simplify your everyday tasks. From shortening URLs and performing complex calculations to managing your social media, NexTool Hub provides a wide range of free and efficient tools. Our mission is to make your digital life easier and more productive. Dive into our blog to learn more about our tools and how they can help you achieve your goals." data-lang-bn="আপনার দৈনন্দিন কাজগুলোকে সহজ করার জন্য তৈরি আমাদের অল-ইন-ওয়ান ডিজিটাল টুলকিটের ক্ষমতা আবিষ্কার করুন। URL ছোট করা, জটিল গণনা করা থেকে শুরু করে আপনার সোশ্যাল মিডিয়া পরিচালনা করা পর্যন্ত, নেক্সটুল হাব বিনামূল্যে এবং কার্যকর টুলের একটি বিস্তৃত পরিসর সরবরাহ করে। আমাদের লক্ষ্য হল আপনার ডিজিটাল জীবনকে আরও সহজ এবং উৎপাদনশীল করে তোলা। আমাদের টুল সম্পর্কে এবং কীভাবে তারা আপনাকে আপনার লক্ষ্য অর্জনে সহায়তা করতে পারে সে সম্পর্কে আরও জানতে আমাদের ব্লগে ডুব দিন।">Discover the power of our all-in-one digital toolkit, designed to simplify your everyday tasks. From shortening URLs and performing complex calculations to managing your social media, NexTool Hub provides a wide range of free and efficient tools. Our mission is to make your digital life easier and more productive. Dive into our blog to learn more about our tools and how they can help you achieve your goals.</p>
-                <a href="#" class="read-more-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন" target="_blank" rel="noopener noreferrer">Read More</a>
+                <a href="what-is-nextool-hub.html" class="read-more-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন" target="_blank" rel="noopener noreferrer">Read More</a>
             </div>
             <div class="ad-container-mobile">
                 <script type="text/javascript">
