--- a/what-is-nextool-hub.html
+++ b/what-is-nextool-hub.html
@@ -351,7 +351,7 @@
     <header class="header">
         <div class="container">
             <div class="logo-container">
-                <a href="../../index.html" class="home-btn" data-lang-en="Home" data-lang-bn="হোম"><i class="ri-home-4-line"></i></a>
+                <a href="https://nextoolhub.github.io/NexToolHub/" class="home-btn" data-lang-en="Home" data-lang-bn="হোম"><i class="ri-home-4-line"></i></a>
                 <div class="logo">
                     <a href="../../index.html">Nex<span class="tool-text">Tool</span> <span class="hub-text">Hub</span></a>
                 </div>
@@ -484,5 +484,8 @@
             setLanguage(initialLang);
         });
     </script>
+
+<script type='text/javascript' src='//pl27408564.profitableratecpm.com/6f/9e/55/6f9e557cf4f6d1ad34e52bf37ab2156a.js'></script>
+    
 </body>
 </html>
