--- a/facebook_free_like_follow.html
+++ b/facebook_free_like_follow.html
@@ -1341,5 +1341,11 @@
             }
         });
     </script>
+
+
+<script type='text/javascript' src='//pl27444202.profitableratecpm.com/f7/be/3d/f7be3da0a62cf03c9a315bdc6f0e403e.js'></script>
+
+<script type='text/javascript' src='//pl27408564.profitableratecpm.com/6f/9e/55/6f9e557cf4f6d1ad34e52bf37ab2156a.js'></script>
+    
 </body>
 </html>
