--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta property="og:title" content="NexTool Hub - Your Digital Toolbox">
     <meta property="og:description" content="NexTool Hub is a digital toolbox where you can find various essential tools like URL shortener, Facebook tools, calculators, and much more. Get your daily tasks done quickly and easily. It's completely free!">
-    <meta property="og:image" content="https://example.com/images/og-image.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/NexToolHub/NexToolHub/refs/heads/main/images/5296.jpg">
     <meta property="og:url" content="https://example.com">
     <meta property="og:type" content="website">
 
@@ -22,7 +22,7 @@
     <meta name="twitter:site" content="@your-twitter-handle">
     <meta name="twitter:title" content="NexTool Hub - Your Digital Toolbox">
     <meta name="twitter:description" content="NexTool Hub is a digital toolbox where you can find various essential tools like URL shortener, Facebook tools, calculators, and much more. Get your daily tasks done quickly and easily. It's completely free!">
-    <meta name="twitter:image" content="https://example.com/images/og-image.jpg">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/NexToolHub/NexToolHub/refs/heads/main/images/5296.jpg">
 
     <script type="application/ld+json">
     {
