--- a/url_shortener.html
+++ b/url_shortener.html
@@ -49,8 +49,8 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px 0;
-            opacity: 0;
-            animation: fadeInUp 0.8s ease-out 0.2s forwards;
+            opacity: 0; /* Add this */
+            animation: fadeInUp 0.8s ease-out 0.2s forwards; /* Add this */
         }
 
         .logo-container {
@@ -135,8 +135,8 @@
             box-shadow: var(--shadow-light);
             position: relative;
             overflow: hidden;
-            opacity: 0;
-            animation: fadeInUp 0.8s ease-out 0.4s forwards;
+            opacity: 0; /* Add this */
+            animation: fadeInUp 0.8s ease-out 0.4s forwards; /* Add this */
         }
 
         .hero-section h1, .hero-section p {
@@ -166,8 +166,8 @@
             justify-content: center;
             text-align: center;
             padding: 40px 20px;
-            opacity: 0;
-            animation: fadeInUp 0.8s ease-out 0.6s forwards;
+            opacity: 0; /* Add this */
+            animation: fadeInUp 0.8s ease-out 0.6s forwards; /* Add this */
         }
 
         .tool-card {
@@ -315,8 +315,8 @@
             margin-top: auto;
             background-color: var(--card-bg);
             border-top: 1px solid #e0e0e0;
-            opacity: 0;
-            animation: fadeInUp 0.8s ease-out 0.8s forwards;
+            opacity: 0; /* Add this */
+            animation: fadeInUp 0.8s ease-out 0.8s forwards; /* Add this */
         }
 
         .footer-links a {
@@ -394,7 +394,6 @@
 
                 <a href="../../index.html" class="view-btn" data-lang-en="View All Tools" data-lang-bn="সব টুল দেখুন">View All Tools</a>
             </div>
-            
         </section>
 
     </div>
@@ -469,26 +468,19 @@
                 statusMessage.style.color = '#4A90E2';
                 shortenBtn.disabled = true;
 
-                // এখানে আপনার নতুন Apps Script URL ব্যবহার করতে হবে
-                const scriptURL = 'https://script.google.com/macros/s/AKfycbxpV2vSnp2TouJE93hU5C6dxX4cLwaUMvBDAN3uDbKHw_zD-TWiYlXs70KjoBjHOM4hJg/exec';
-                
-                try {
-                    const response = await fetch(scriptURL, {
-                        method: 'POST',
-                        body: JSON.stringify({ url: longUrl }),
-                        headers: {
-                            'Content-Type': 'application/json',
-                        },
-                    });
-                    const shortenedCode = await response.text();
+                const uniqueUrl = `${longUrl}?v=${Date.now()}`;
 
-                    if (response.ok) {
-                        shortenedUrlSpan.textContent = `https://আপনার-github-username.github.io/your-repo-name/redirect.html?${shortenedCode}`;
+                try {
+                    const response = await fetch(`https://tinyurl.com/api-create.php?url=${uniqueUrl}`);
+                    const shortenedUrl = await response.text();
+
+                    if (shortenedUrl.startsWith('https://')) {
+                        shortenedUrlSpan.textContent = shortenedUrl;
                         resultContainer.style.display = 'block';
                         statusMessage.textContent = longUrlInput.dataset.lang === 'bn' ? 'URL সফলভাবে শর্ট করা হয়েছে!' : 'URL successfully shortened!';
                         statusMessage.style.color = '#5CB85C';
                     } else {
-                        throw new Error(shortenedCode);
+                        throw new Error(shortenedUrl);
                     }
                 } catch (error) {
                     let errorMessage = longUrlInput.dataset.lang === 'bn' ? 'URL শর্ট করতে সমস্যা হয়েছে।' : 'Failed to shorten URL.';
