--- a/url_shortener.html
+++ b/url_shortener.html
@@ -330,6 +330,12 @@
             margin-bottom: 20px;
         }
 
+        /* --- Full-width ad container for desktop --- */
+        .ad-container.full-width-desktop-ad {
+            max-width: 100%;
+            padding: 0 10px;
+        }
+
         /* --- Article Section --- */
         .article-section {
             margin-top: 40px;
@@ -542,6 +548,12 @@
             .ad-container.mobile-only {
                 display: none;
             }
+            
+            /* Specific style for full-width desktop ad */
+            .ad-container.full-width-desktop-ad {
+                width: 100%;
+                margin: 20px auto;
+            }
         }
     </style>
 </head>
@@ -629,7 +641,7 @@
                 <script type="text/javascript" src="//www.highperformanceformat.com/eefd5e3bd2c4d4b53fe80f25417a2497/invoke.js"></script>
             </div>
             
-            <div class="ad-container desktop-only">
+            <div class="ad-container desktop-only full-width-desktop-ad">
                 <script async="async" data-cfasync="false" src="//pl27408554.profitableratecpm.com/45718544708b185acff6d14248cc94cd/invoke.js"></script> <div id="container-45718544708b185acff6d14248cc94cd"></div>
             </div>
         </section>
