--- a/index.html
+++ b/index.html
@@ -1032,9 +1032,9 @@
 <section id="spin-and-win-section" class="spin-and-win-section filterable-section visible">
     <h2 class="on-scroll-animate" data-lang-en="Test Your Luck: Spin & Win!" data-lang-bn="আপনার ভাগ্য পরীক্ষা করুন">Test Your Luck: Spin & Win!</h2>
     <div class="spin-content-wrapper on-scroll-animate">
-        <a href="your-link-here.html" class="spin-button-btn" data-lang-en="Spin to Win!" data-lang-bn="ভাগ্য পরীক্ষা করুন!">Spin to Win!</a>
+        <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" class="spin-button-btn" data-lang-en="Spin to Win!" data-lang-bn="ভাগ্য পরীক্ষা করুন!">Spin to Win!</a>
         <div class="spin-wheel-container">
-            <img src="https://raw.githubusercontent.com/NexToolHub/NexToolHub/main/images/spin-wheel.png" alt="Spinning prize wheel" class="spin-wheel">
+            <img src="https://raw.githubusercontent.com/NexToolHub/NexToolHub/refs/heads/main/images/5336_11zon.png" alt="Spinning prize wheel" class="spin-wheel">
         </div>
     </div>
 </section>
