--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@
         </a>
         <div class="viral-text-container">
             <p class="viral-text" data-lang-en="Check out the 'Check Out' button to get all the latest viral links." data-lang-bn="নিত্য নতুন সব ভাইরাল লিংক পেতে চেকআউট বাটনে ক্লিক করুন।">Check out the 'Check Out' button to get all the latest viral links.</p>
-            <a href="#" class="checkout-btn" id="checkout-btn" data-lang-en="Check Out" data-lang-bn="চেকআউট">Check Out</a>
+            <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" class="checkout-btn" id="checkout-btn" data-lang-en="Check Out" data-lang-bn="চেকআউট">Check Out</a>
         </div>
     </div>
 </section>
