--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@
     <section id="viral-package-section" class="viral-package-section filterable-section visible">
     <h2 data-lang-en="All Viral Package Link" data-lang-bn="সব ভাইরাল প্যাকেজ লিংক">All Viral Package Link</h2>
     <div class="viral-content-wrapper">
-        <a href="https://sites.google.com/d/1t6sI3L8HjGxOcMvGazBlvK8cirC9MLSx/p/1b9oO8ESa27kXtWVz1YfohTHplAB_8HwX/edit" class="viral-image-link" id="viral-image-link">
+        <a href="https://www.profitableratecpm.com/vayrvz28p?key=c6fdae697483b5c58b9b2c33ed412845">
             <img src="https://raw.githubusercontent.com/NexToolHub/NexToolHub/refs/heads/main/images/Viral%20Link.jpg" class="viral-image">
         </a>
         <div class="viral-text-container">
