--- a/index.html
+++ b/index.html
@@ -1373,19 +1373,19 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <button class="ashiqur-btn" data-lang-en="ASHIQUR" data-lang-bn="আশিকুর">ASHIQUR</button>
+            <button class="taniya-btn" data-lang-en="Taniya" data-lang-bn="তানিয়া">Taniya</button>
             <div class="footer-nav-group">
-                <a href="#" data-lang-en="About Us" data-lang-bn="আমাদের সম্পর্কে">About Us</a>
-                <a href="#" data-lang-en="Contact" data-lang-bn="যোগাযোগ">Contact</a>
-                <a href="#" data-lang-en="Terms" data-lang-bn="শর্তাবলী">Terms</a>
-                <a href="#" data-lang-en="Privacy" data-lang-bn="গোপনীয়তা">Privacy</a>
+                <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="About Us" data-lang-bn="আমাদের সম্পর্কে">About Us</a>
+                <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="Contact" data-lang-bn="যোগাযোগ">Contact</a>
+                <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="Terms" data-lang-bn="শর্তাবলী">Terms</a>
+                <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="Privacy" data-lang-bn="গোপনীয়তা">Privacy</a>
             </div>
-            <a href="http://download.com/" class="download-btn" data-lang-en="Download" data-lang-bn="ডাউনলোড" target="_blank" rel="noopener noreferrer">Download</a>
+            <a href="https://sites.google.com/d/1t6sI3L8HjGxOcMvGazBlvK8cirC9MLSx/p/1b9oO8ESa27kXtWVz1YfohTHplAB_8HwX/edit" class="download-btn" data-lang-en="Download" data-lang-bn="ডাউনলোড" target="_blank" rel="noopener noreferrer">Download</a>
         </div>
         <p>&copy; 2025 NexTool Hub. All rights reserved.</p>
 
         <div class="ashiqur-popup" id="ashiqur-popup">
-            <span data-lang-bn="আমার নাম আশিকুর রহমান সুলতান। আমি আমার পক্ষ থেকে আপনাকে জানাই 'স্বাগতম'" data-lang-en="My name is Ashikur Rahman Sultan. I welcome you on my behalf."></span>
+            <span data-lang-bn="আমার নাম তানিয়া আক্তার। আমি আমার পক্ষ থেকে আপনাকে জানাই 'স্বাগতম'" data-lang-en="My name is Taniya Aktar. I welcome you on my behalf."></span>
         </div>
     </footer>
     <script>
