--- a/facebook_free_like_follow.html
+++ b/facebook_free_like_follow.html
@@ -1041,10 +1041,10 @@
     
     <footer class="footer">
         <div class="footer-links">
-            <a href="#" data-lang-en="About Us" data-lang-bn="আমাদের সম্পর্কে">About Us</a>
-            <a href="#" data-lang-en="Contact" data-lang-bn="যোগাযোগ">Contact</a>
-            <a href="#" data-lang-en="Terms" data-lang-bn="শর্তাবলী">Terms</a>
-            <a href="#" data-lang-en="Privacy" data-lang-bn="গোপনীয়তা">Privacy</a>
+            <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="About Us" data-lang-bn="আমাদের সম্পর্কে">About Us</a>
+            <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="Contact" data-lang-bn="যোগাযোগ">Contact</a>
+            <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="Terms" data-lang-bn="শর্তাবলী">Terms</a>
+            <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="Privacy" data-lang-bn="গোপনীয়তা">Privacy</a>
         </div>
         <p data-lang-en="&copy; 2025 NexTool Hub. All rights reserved." data-lang-bn="&copy; 2025 নেক্সটুল হাব। সর্বস্বত্ব সংরক্ষিত।">&copy; 2025 NexTool Hub. All rights reserved.</p>
     </footer>
