--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,7 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <button class="taniya-btn" data-lang-en="Taniya" data-lang-bn="তানিয়া">Taniya</button>
+            <button class="ashiqur-btn" data-lang-en="Taniya" data-lang-bn="তানিয়া">Taniya</button>
             <div class="footer-nav-group">
                 <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="About Us" data-lang-bn="আমাদের সম্পর্কে">About Us</a>
                 <a href="https://www.profitableratecpm.com/gpbenjxu?key=bebb9ec59e6fe86414605a44c4b0ad9f" data-lang-en="Contact" data-lang-bn="যোগাযোগ">Contact</a>
