--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexTool Hub - Your Digital Toolbox</title>
+    <title>Viral Wow - Your Digital Toolbox</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -715,7 +715,7 @@ body.dark-mode .mode-toggle .ri-moon-line { display: block; }
             <div class="logo">
                 <a href="#">
                     <i class="ri-rocket-2-line logo-icon"></i>
-                    <span class="nex-text">Nex</span><span class="tool-text">Tool</span> <span class="hub-text">Hub</span>
+                    <span class="nex-text">Viral</span> <span class="tool-text">Wow</span>
                 </a>
             </div>
             <div class="header-right">
@@ -873,7 +873,7 @@ body.dark-mode .mode-toggle .ri-moon-line { display: block; }
             </div>
             <a href="https://sites.google.com/d/1t6sI3L8HjGxOcMvGazBlvK8cirC9MLSx/p/1b9oO8ESa27kXtWVz1YfohTHplAB_8HwX/edit" class="download-btn" data-lang-en="Download" data-lang-bn="ডাউনলোড" target="_blank" rel="noopener noreferrer">Download</a>
         </div>
-        <p>&copy; 2025 NexTool Hub. All rights reserved.</p>
+        <p>&copy; 2025 Viral Wow. All rights reserved.</p>
         <div class="ashiqur-popup" id="ashiqur-popup">
             <span data-lang-bn="আমার নাম তানিয়া আক্তার। আমি আমার পক্ষ থেকে আপনাকে জানাই 'স্বাগতম'" data-lang-en="My name is Taniya Aktar. I welcome you on my behalf."></span>
         </div>
