--- a/index.html
+++ b/index.html
@@ -815,11 +815,11 @@ body.dark-mode .mode-toggle .ri-moon-line { display: block; }
         <section id="all-viral-link-section" class="all-viral-link-section filterable-section visible">
             <h2 class="on-scroll-animate" data-lang-en="All Viral Link" data-lang-bn="সব ভাইরাল লিংক">All Viral Link</h2>
             <div class="viral-link-image-container on-scroll-animate">
-                <img src="https://via.placeholder.com/1280x720.png?text=YouTube+Thumbnail+16:9" alt="Viral Video Thumbnail" class="viral-link-image">
+                <img src="https://raw.githubusercontent.com/Viral-Wow/viral-link/refs/heads/main/images/Viral%20Link.jpg" alt="Viral Video Thumbnail" class="viral-link-image">
             </div>
             <p class="viral-link-text on-scroll-animate" data-lang-en="To get all kinds of new black and white viral video links, click the checkout button." data-lang-bn="নিত্য নতুন সব ধরনের সাদাকালো ভাইরাল ভিডিও পেতে চেকআউট বাটনে ক্লিক করুন।">নিত্য নতুন সব ধরনের সাদাকালো ভাইরাল ভিডিও পেতে চেকআউট বাটনে ক্লিক করুন।</p>
             <div class="on-scroll-animate">
-                <a href="https://www.your-viral-link-here.com" target="_blank" class="viral-link-button" data-lang-en="Check Out" data-lang-bn="চেকআউট করুন">Check Out</a>
+                <a href="viral-video.html" target="_blank" class="viral-link-button" data-lang-en="Check Out" data-lang-bn="চেকআউট করুন">Check Out</a>
             </div>
         </section>
 
